--- a/frontend/src/components/BalanceGraph/BalanceGraph.module.css
+++ b/frontend/src/components/BalanceGraph/BalanceGraph.module.css
@@ -1,26 +1,54 @@
 .balanceGraph {
-  flex: 2;
-  background-color: #fff;
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  gap: 20px; /* Adds space between sections */
+  background-color: #f9f9f9; /* Optional background for the container */
   padding: 20px;
-  border-radius: 8px;
+  border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .balance {
-  margin-bottom: 20px;
+  background-color: #e8f4f8; /* Light blue */
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .incomeExpense {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
+  gap: 20px;
+}
+
+.income {
+  background-color: #e8fbe8; /* Light green */
+  flex: 1;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.expense {
+  background-color: #fbe8e8; /* Light red */
+  flex: 1;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .graph {
-  height: 200px;
-  background-color: #f0f0f0;
+  background-color: #f2f2f2; /* Light gray */
+  padding: 20px;
   border-radius: 8px;
+  text-align: center;
+  height: 200px; /* Example height for the graph */
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
