--- a/frontend/src/components/Form/Form.module.css
+++ b/frontend/src/components/Form/Form.module.css
@@ -7,8 +7,10 @@
   border-radius: 10px;
   background-color: #f9f9f9;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  margin: auto;
+  /* max-width: 400px; */
+  flex: 1;
+  /* margin: auto; */
+  height: max-content;
 }
 
 .field {
