--- a/frontend/src/components/Form/Form.module.css
+++ b/frontend/src/components/Form/Form.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 20px;
   padding: 30px;
-  border: 2px solid #4caf50;
+  border: 2px solid#8cd9aa;
   border-radius: 10px;
   background-color: #f9f9f9;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -35,7 +35,7 @@
 }
 
 .inputField:focus {
-  border-color: #4caf50;
+  border-color: #8cd9aa;
 }
 
 .submitButton {
@@ -43,7 +43,7 @@
   font-size: 1rem;
   font-weight: bold;
   color: #fff;
-  background-color: #4caf50;
+  background-color: #8cd9aa;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -51,7 +51,7 @@
 }
 
 .submitButton:hover {
-  background-color: #45a049;
+  background-color: #8cd9aa;
   transform: scale(1.05);
 }
 
